[gd_scene load_steps=2 format=3 uid="uid://cbwccvmoi03uv"]

[ext_resource type="Script" path="res://ScreenNodes/CalendarNodes/assign_shift_panel.gd" id="1_52u1j"]

[node name="AssignShiftPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_52u1j")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
offset_right = 500.0
offset_bottom = 500.0
color = Color(0.105882, 0.105882, 0.105882, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
offset_right = 500.0
offset_bottom = 500.0

[node name="M" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
offset_right = 500.0
offset_bottom = 20.0

[node name="Instructions" type="Label" parent="MarginContainer/VBoxContainer"]
offset_top = 24.0
offset_right = 500.0
offset_bottom = 50.0
text = "Choose Resident To Fill This Shift:"
horizontal_alignment = 1

[node name="InfoText" type="Label" parent="MarginContainer/VBoxContainer"]
offset_top = 54.0
offset_right = 500.0
offset_bottom = 77.0
horizontal_alignment = 1

[node name="CurrentResident" type="Label" parent="MarginContainer/VBoxContainer"]
offset_top = 81.0
offset_right = 500.0
offset_bottom = 104.0
horizontal_alignment = 1

[node name="M2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
offset_top = 108.0
offset_right = 500.0
offset_bottom = 128.0

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer"]
offset_top = 132.0
offset_right = 500.0
offset_bottom = 152.0
toggle_mode = false
alignment = 1

[node name="M3" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
offset_top = 156.0
offset_right = 500.0
offset_bottom = 176.0

[node name="SubmitButton" type="Button" parent="MarginContainer/VBoxContainer"]
offset_top = 180.0
offset_right = 500.0
offset_bottom = 211.0
text = "Submit"

[node name="Button" type="Button" parent="MarginContainer"]
offset_left = 472.0
offset_right = 500.0
offset_bottom = 31.0
size_flags_horizontal = 8
size_flags_vertical = 0
text = "[x]"
alignment = 0

[connection signal="item_selected" from="MarginContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="MarginContainer/Button" to="." method="_on_button_pressed"]
